# llm-evals-2-preparing-for-prod

./: .env.sample  .gitignore  README.md  config.yaml  containers.md  docker-compose.yaml  docker-compose.yml  knowledge_base.py  main.py  pyproject.toml  ragas_eval.py  requirements.txt  seed_prompts.py  task-2-output.md  task-4-output.md  task_two.py  user_feedback.py
config/: config.yml  prompts.yml  rails.co
config/input/: config.yml
config/output/: config.co  config.yml
config/rails/: input.co
guardrails/input/: config.co  config.yml
guardrails/output/: config.yml
learnings/: learnings.md
liteLLM/: config.yaml  docker-compose.yml
rails/: prompts.yml
tasks/: task_1.md  task_2.md  task_4.md
