[project]
name = "llm-evals-2-preparing-for-prod"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.28",
    "langchain-openai>=1.1.12",
    "langchain-qdrant>=1.1.0",
    "langchain-redis>=0.2.5",
    "langfuse>=4.2.0",
    "nemoguardrails>=0.21.0",
    "openai>=2.31.0",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.17.1",
    "ragas>=0.4.3",
    "redis>=7.4.0",
    "requests>=2.33.1",
]
